<resources>
    <string name="app_name">Joopz</string>
    <string name="button_login">Login</string>
    <string name="button_forgot_password">Forgot password?</string>
    <string name="button_create_account">Create account</string>
    <string name="email">Email</string>
    <string name="hint_password">Password</string>
    <string name="minimum_password">Password is at least 6 characters.</string>
    <string name="auth_failed">Authentication failed, check email and/or password or create account.</string>
    <string name="header">Challenge #</string>
    <string name="incomplete_loop"></string>
    <string name="start_value">Start value: </string>
    <string name="condition_operator">Condition operator: </string>
    <string name="condition_value">Condition value: </string>
    <string name="value_change">Value change: </string>
    <string name="button_execute">TRY IT</string>
    <string name="result"></string>
    <string name="get_problem">GET PROBLEM</string>
    <string name="instructions"></string>

</resources>
